maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:21: error: method leftFollowerMode has return statement; needs result type
      return();
      ^PledgeMaze:27: error: value += is not a member of Int
            sommeAngle += 1;
                       ^PledgeMaze:31: error: value += is not a member of Int
              sommeAngle += 1;
                         ^PledgeMaze:35: error: value -= is not a member of Int
        } else { right(); sommeAngle -= 1;} 
                                     ^